fix iphone x layout

--- a/BＭIBattle/Login.storyboard
+++ b/BＭIBattle/Login.storyboard
@@ -19,7 +19,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="登入頁1" translatesAutoresizingMaskIntoConstraints="NO" id="nN8-At-nAw" userLabel="bg">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="登入頁1" translatesAutoresizingMaskIntoConstraints="NO" id="nN8-At-nAw" userLabel="bg">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S6R-CU-vfI">
@@ -45,7 +45,6 @@
                                 <rect key="frame" x="209" y="435" width="106" height="44"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="1rU-Pc-rW0"/>
                                     <constraint firstAttribute="width" constant="106" id="KNQ-A0-Mhh"/>
                                 </constraints>
                                 <state key="normal" title="註冊" backgroundImage="img_ButtonBg">
@@ -103,21 +102,23 @@
                                 </constraints>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="nN8-At-nAw" firstAttribute="leading" secondItem="jNX-7u-68K" secondAttribute="leading" id="0vF-Hy-4Ea"/>
                             <constraint firstItem="q3p-aT-nZu" firstAttribute="top" secondItem="S6R-CU-vfI" secondAttribute="bottom" constant="25" id="3gt-ai-jeJ"/>
+                            <constraint firstItem="nN8-At-nAw" firstAttribute="trailing" secondItem="jNX-7u-68K" secondAttribute="trailing" id="6bU-cx-uOP"/>
+                            <constraint firstItem="nN8-At-nAw" firstAttribute="leading" secondItem="jNX-7u-68K" secondAttribute="leading" id="IDp-uT-9HD"/>
                             <constraint firstAttribute="bottom" secondItem="S6R-CU-vfI" secondAttribute="bottom" constant="188" id="Iyx-lE-G1T"/>
                             <constraint firstAttribute="trailing" secondItem="Bo3-gJ-qFk" secondAttribute="trailing" constant="24" id="JOI-HI-jfV"/>
+                            <constraint firstAttribute="bottom" secondItem="nN8-At-nAw" secondAttribute="bottom" id="Kfr-Hf-Gse"/>
+                            <constraint firstItem="nN8-At-nAw" firstAttribute="top" secondItem="Bov-ba-VT5" secondAttribute="top" id="bCu-3J-h4i"/>
                             <constraint firstItem="S6R-CU-vfI" firstAttribute="leading" secondItem="jNX-7u-68K" secondAttribute="leading" constant="60" id="cAi-Iu-v5J"/>
                             <constraint firstItem="Bo3-gJ-qFk" firstAttribute="top" secondItem="jNX-7u-68K" secondAttribute="top" constant="57" id="dyz-du-PeQ"/>
                             <constraint firstItem="q3p-aT-nZu" firstAttribute="centerX" secondItem="Bov-ba-VT5" secondAttribute="centerX" id="gzZ-1q-3GO"/>
                             <constraint firstAttribute="bottomMargin" secondItem="qMf-T5-cZN" secondAttribute="bottom" constant="188" id="hNx-Ru-ZwP"/>
                             <constraint firstItem="jNX-7u-68K" firstAttribute="trailing" secondItem="qMf-T5-cZN" secondAttribute="trailing" constant="60" id="ihM-Ti-LRp"/>
-                            <constraint firstItem="nN8-At-nAw" firstAttribute="bottom" secondItem="jNX-7u-68K" secondAttribute="bottom" id="jsf-fq-6jk"/>
-                            <constraint firstItem="nN8-At-nAw" firstAttribute="top" secondItem="Bov-ba-VT5" secondAttribute="top" id="k4G-hc-Rxk"/>
-                            <constraint firstItem="nN8-At-nAw" firstAttribute="trailing" secondItem="jNX-7u-68K" secondAttribute="trailing" id="q0p-Jy-gpf"/>
+                            <constraint firstItem="qMf-T5-cZN" firstAttribute="height" secondItem="S6R-CU-vfI" secondAttribute="height" id="n6j-JG-EaF"/>
                             <constraint firstItem="qMf-T5-cZN" firstAttribute="width" secondItem="S6R-CU-vfI" secondAttribute="width" id="rRC-Gc-Foq"/>
+                            <constraint firstItem="qMf-T5-cZN" firstAttribute="top" secondItem="S6R-CU-vfI" secondAttribute="top" id="yHz-3j-OQf"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="jNX-7u-68K"/>
                     </view>
@@ -265,6 +266,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Icon_Lock" translatesAutoresizingMaskIntoConstraints="NO" id="zjK-9D-LFB">
