--- a/BＭIBattle/Base.lproj/Main.storyboard
+++ b/BＭIBattle/Base.lproj/Main.storyboard
@@ -19,11 +19,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Img_Friends" translatesAutoresizingMaskIntoConstraints="NO" id="vdX-yP-JtH">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Img_Friends" translatesAutoresizingMaskIntoConstraints="NO" id="vdX-yP-JtH">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="250"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="250" id="N7L-Vb-gYV"/>
-                                </constraints>
                             </imageView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="60" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="vs8-DK-14Y">
                                 <rect key="frame" x="0.0" y="250" width="375" height="368"/>
@@ -72,13 +69,16 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="vdX-yP-JtH" secondAttribute="trailing" id="Eex-Tv-Bwl"/>
+                            <constraint firstItem="vs8-DK-14Y" firstAttribute="trailing" secondItem="ryc-7g-jLr" secondAttribute="trailing" id="2HM-O1-3vP"/>
+                            <constraint firstItem="ryc-7g-jLr" firstAttribute="bottom" secondItem="vs8-DK-14Y" secondAttribute="bottom" id="H6J-OP-aDl"/>
+                            <constraint firstItem="vs8-DK-14Y" firstAttribute="top" secondItem="vdX-yP-JtH" secondAttribute="bottom" id="N20-cw-4Tw"/>
                             <constraint firstItem="ryc-7g-jLr" firstAttribute="bottom" secondItem="vs8-DK-14Y" secondAttribute="bottom" id="S5F-Uv-J5G"/>
-                            <constraint firstItem="vs8-DK-14Y" firstAttribute="top" secondItem="vdX-yP-JtH" secondAttribute="bottom" id="SYt-F6-YxK"/>
                             <constraint firstItem="ryc-7g-jLr" firstAttribute="trailing" secondItem="vs8-DK-14Y" secondAttribute="trailing" id="TIV-b7-Idm"/>
-                            <constraint firstItem="vdX-yP-JtH" firstAttribute="leading" secondItem="ryc-7g-jLr" secondAttribute="leading" id="XS2-cA-HJM"/>
+                            <constraint firstItem="vdX-yP-JtH" firstAttribute="top" secondItem="dwT-MH-Ce2" secondAttribute="top" id="VXC-Rz-hJ1"/>
                             <constraint firstItem="vs8-DK-14Y" firstAttribute="leading" secondItem="ryc-7g-jLr" secondAttribute="leading" id="o9e-hu-q8P"/>
-                            <constraint firstItem="vdX-yP-JtH" firstAttribute="top" secondItem="dwT-MH-Ce2" secondAttribute="top" id="xGA-R6-0xz"/>
+                            <constraint firstItem="vs8-DK-14Y" firstAttribute="leading" secondItem="ryc-7g-jLr" secondAttribute="leading" id="yEQ-Rs-Auj"/>
+                            <constraint firstItem="ryc-7g-jLr" firstAttribute="trailing" secondItem="vdX-yP-JtH" secondAttribute="trailing" id="zCR-xI-Xdg"/>
+                            <constraint firstItem="vdX-yP-JtH" firstAttribute="leading" secondItem="ryc-7g-jLr" secondAttribute="leading" id="zUd-sC-ZBR"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ryc-7g-jLr"/>
                     </view>
@@ -88,7 +88,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DZY-Es-E4V" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3189.5999999999999" y="-388.15592203898052"/>
+            <point key="canvasLocation" x="3188.4057971014495" y="-388.39285714285711"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="Nfq-eQ-bzl">
